arcadia/arcadia-ai-local-ingress-v2.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: arcadia-ic
  annotations:
    appprotect.f5.com/app-protect-policy: "arcadia/waf-base-blocking"
    appprotect.f5.com/app-protect-enable: "True"
    appprotect.f5.com/app-protect-security-log-enable: "True"
    appprotect.f5.com/app-protect-security-log: "arcadia/logconf"
spec:
  ingressClassName: nginx-ingress
  tls:
  - hosts:
    - arcadia.ai.local
  rules:
  - host: arcadia.ai.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
               number: 80
