arcadia/arcadia-ai-local-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: arcadia-ic
spec:
  ingressClassName: nginx-ingress
  tls:
  - hosts:
    - arcadia.ai.local
  rules:
  - host: arcadia.ai.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
               number: 80
